--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ color-eyre = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
 thiserror = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
