--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
 thiserror = "1.0"
 serde_json = "1.0"
+semver = "1.0"
+dirs = "5.0"
+toml = "0.8"
 
 [dev-dependencies]
 assert_cmd = "2.0"
