--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ semver = "1.0"
 dirs = "5.0"
 toml = "0.8"
 tempfile = "3.14"
+uuid = { version = "1.11", features = ["v4"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
