feat(hot-reload): add native file watching with notify crate
- Add optional 'native-watch' feature flag with notify v7.0 dependency
- Implement HotReloadWatcher::start_native() for real-time file watching
- Add run_native_watch_loop() for automatic command re-execution on changes
- Support FSEvent (macOS), inotify (Linux) via notify crate
- Add debouncing and include/exclude pattern filtering for events
- Add --dry-run flag to CLI for testing without blocking
- Add NativeWatcherHandle with Debug implementation
- Add OnChangeCallback type alias for cleaner function signatures
- Update PLAN.md with implementation details

Tests: 5 unit tests (native watcher), 16 E2E tests (CLI, feature detection)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "pybun"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+# Enable native file watching using the `notify` crate (macOS/Linux)
+native-watch = ["notify"]
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 color-eyre = "0.6"
@@ -15,6 +20,8 @@ dirs = "5.0"
 toml = "0.8"
 tempfile = "3.14"
 uuid = { version = "1.11", features = ["v4"] }
+# Native file system watcher (optional, for `pybun watch`)
+notify = { version = "7.0", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2.0"
