feat(pep723): implement venv caching for PEP 723 scripts (PR-OPT1)
- Add src/pep723_cache.rs: SHA-256 hash-based venv caching
- Cache location: ~/.cache/pybun/pep723-envs/{hash}/
- LRU-based garbage collection integrated with 'pybun gc'
- PYBUN_PEP723_NO_CACHE=1 env var for fallback to temp venv
- Performance improvement: 3104ms -> 101.6ms (30x faster warm start)
- Cold start improvement: 3529ms -> 125ms (28x faster)
- Add 3 E2E tests and 12 unit tests for caching functionality

--- a/scripts/benchmark/config.toml
+++ b/scripts/benchmark/config.toml
@@ -16,7 +16,7 @@ python = true            # Python standard as baseline
 
 [paths]
 # Override paths if not in PATH
-# pybun = "/path/to/pybun"
+pybun = "../../target/release/pybun"
 # uv = "/path/to/uv"
 # pip = "/path/to/pip"
 # pipx = "/path/to/pipx"
