--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ dirs = "5.0"
 toml = "0.8"
 tempfile = "3.14"
 uuid = { version = "1.11", features = ["v4"] }
+sha2 = "0.10"
+hex = "0.4"
 # Native file system watcher (optional, for `pybun watch`)
 notify = { version = "7.0", optional = true }
 
