--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ sha2 = "0.10"
 hex = "0.4"
 # Native file system watcher (optional, for `pybun watch`)
 notify = { version = "7.0", optional = true }
+tokio = { version = "1.48.0", features = ["full"] }
+reqwest = { version = "0.12.25", features = ["json", "rustls-tls", "stream"] }
+futures = "0.3.31"
 
 [dev-dependencies]
 assert_cmd = "2.0"
