--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ tempfile = "3.14"
 uuid = { version = "1.11", features = ["v4"] }
 sha2 = "0.10"
 hex = "0.4"
+base64 = "0.22"
+ed25519-dalek = { version = "2.1", features = ["std"] }
 # Native file system watcher (optional, for `pybun watch`)
 notify = { version = "7.0", optional = true }
 tokio = { version = "1.48.0", features = ["full"] }
