--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ ed25519-dalek = { version = "2.1", features = ["std"] }
 # Native file system watcher (optional, for `pybun watch`)
 notify = { version = "7.0", optional = true }
 tokio = { version = "1.48.0", features = ["full"] }
-reqwest = { version = "0.12.25", features = ["json", "rustls-tls", "stream"] }
+reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls", "stream"] }
 futures = "0.3.31"
 
 [dev-dependencies]
