--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,80 @@ jobs:
         run: cargo clippy --all-targets --all-features -- -D warnings
       - name: test
         run: cargo test
+
+  package-managers:
+    name: package managers (brew)
+    runs-on: ${{ matrix.os }}
+    env:
+      HOMEBREW_NO_AUTO_UPDATE: 1
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Homebrew (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          if ! command -v brew >/dev/null 2>&1; then
+            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          fi
+          echo "/home/linuxbrew/.linuxbrew/bin" >> "$GITHUB_PATH"
+      - name: Prepare Homebrew test tarball
+        shell: bash
+        run: |
+          set -euo pipefail
+          arch="$(uname -m)"
+          if [ "$RUNNER_OS" = "macOS" ]; then
+            if [ "$arch" = "arm64" ]; then
+              target="aarch64-apple-darwin"
+            else
+              target="x86_64-apple-darwin"
+            fi
+          else
+            if [ "$arch" = "aarch64" ] || [ "$arch" = "arm64" ]; then
+              target="aarch64-unknown-linux-gnu"
+            else
+              target="x86_64-unknown-linux-gnu"
+            fi
+          fi
+          tmpdir="$(mktemp -d)"
+          mkdir -p "$tmpdir/pybun-$target"
+          cat > "$tmpdir/pybun-$target/pybun" <<'SH'
+          #!/usr/bin/env bash
+          if [ "$1" = "--version" ]; then
+            echo "pybun test"
+            exit 0
+          fi
+          echo "pybun test"
+          SH
+          chmod +x "$tmpdir/pybun-$target/pybun"
+          tarball="$tmpdir/pybun-test.tar.gz"
+          tar -czf "$tarball" -C "$tmpdir" "pybun-$target"
+          sha="$(shasum -a 256 "$tarball" | awk '{print $1}')"
+          echo "PYBUN_TEST_TARBALL=$tarball" >> "$GITHUB_ENV"
+          echo "PYBUN_TEST_SHA=$sha" >> "$GITHUB_ENV"
+      - name: Brew install from tap
+        shell: bash
+        run: |
+          brew tap pybun/pybun "$PWD"
+          tap_repo="$(brew --repo pybun/pybun)"
+          git -C "$tap_repo" checkout "$GITHUB_SHA"
+          HOMEBREW_PYBUN_TEST_TARBALL="file://$PYBUN_TEST_TARBALL" \
+          HOMEBREW_PYBUN_TEST_SHA256="$PYBUN_TEST_SHA" \
+            brew install pybun/pybun/pybun
+          brew test pybun/pybun/pybun
+
+  winget-validate:
+    name: winget validate
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Validate winget manifest
+        shell: pwsh
+        run: |
+          if (Get-Command winget -ErrorAction SilentlyContinue) {
+            winget validate --manifest winget/pybun.yaml
+          } else {
+            Write-Host "winget not available; skipping"
+          }
