--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ permissions:
   contents: write
   id-token: write
   attestations: write
+  pull-requests: write
 
 env:
   CARGO_TERM_COLOR: always
@@ -275,6 +276,52 @@ jobs:
             pybun-provenance.json
             pybun-sbom.json
             artifacts/**/*.minisig
+
+  package-managers:
+    name: Update package manager manifests
+    runs-on: ubuntu-latest
+    needs: metadata
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Download release metadata
+        uses: actions/download-artifact@v4
+        with:
+          name: release-metadata
+          path: release-metadata
+
+      - name: Read release version
+        id: release_version
+        shell: bash
+        run: |
+          version="$(python3 - <<'PY'
+          import json
+          with open("release-metadata/pybun-release.json", "r", encoding="utf-8") as handle:
+              print(json.load(handle)["version"])
+          PY
+          )"
+          echo "version=${version}" >> "$GITHUB_OUTPUT"
+
+      - name: Generate package manager manifests
+        run: |
+          python3 scripts/release/generate_package_managers.py \
+            --manifest release-metadata/pybun-release.json \
+            --checksums release-metadata/SHA256SUMS \
+            --homebrew Formula/pybun.rb \
+            --scoop bucket/pybun.json \
+            --winget winget/pybun.yaml
+
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          title: "chore(release): update package managers for v${{ steps.release_version.outputs.version }}"
+          body: "Automated update for Homebrew/Scoop/winget manifests."
+          commit-message: "chore(release): update package managers for v${{ steps.release_version.outputs.version }}"
+          branch: "automation/package-managers-v${{ steps.release_version.outputs.version }}"
+          delete-branch: true
 
   # Release job (only on tags)
   release:
