fix(pypi): honor extras and python_version markers in requires_dist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
+    "cffi>=1.15,<2",
     "numpy",
     "pandas",
     "scikit-image",
