--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = []
+default = ["performance-allocator"]
 # Enable native file watching using the `notify` crate (macOS/Linux)
 native-watch = ["notify"]
+# Enable high-performance allocators (mimalloc on Windows, jemalloc elsewhere).
+performance-allocator = ["mimalloc", "tikv-jemallocator"]
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
@@ -29,6 +31,8 @@ notify = { version = "7.0", optional = true }
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls", "stream"] }
 futures = "0.3.31"
+mimalloc = { version = "0.1.43", optional = true }
+tikv-jemallocator = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
 assert_cmd = "2.0"
