--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ notify = { version = "7.0", optional = true }
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls", "stream"] }
 futures = "0.3.31"
+dashmap = "6.1"
 mimalloc = { version = "0.1.43", optional = true }
 tikv-jemallocator = { version = "0.6.0", optional = true }
 
