--- a/deny.toml
+++ b/deny.toml
@@ -13,10 +13,12 @@ allow = [
   "BSD-3-Clause",
   "ISC",
   "MPL-2.0",
+  "Unicode-3.0",
   "Unicode-DFS-2016",
   "Zlib",
   "OpenSSL",
   "CC0-1.0",
+  "CDLA-Permissive-2.0",
 ]
 confidence-threshold = 0.8
 
