PR7.5: Security/compliance sign-off (#64)
* chore(ci): add security compliance gates

* chore(ci): fix cargo-deny config for unmaintained scope

* chore(ci): remove deprecated license deny list in cargo-deny

* chore(ci): allow Unicode/CDLA licenses and set crate license

* chore(ci): fix pip-audit invocation for project path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,30 @@ jobs:
             brew install pybun/pybun/pybun
           brew test pybun/pybun/pybun
 
+  security-audit:
+    name: security audit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: Cache cargo
+        uses: Swatinem/rust-cache@v2
+        with:
+          cache-targets: true
+          cache-on-failure: true
+      - name: Install audit tools
+        run: |
+          cargo install cargo-audit --locked
+          cargo install cargo-deny --locked
+          python -m pip install --upgrade pip pip-audit
+      - name: Cargo audit
+        run: cargo audit
+      - name: Cargo license scan
+        run: cargo deny check licenses
+      - name: Pip audit
+        run: pip-audit --progress-spinner off .
+
   winget-validate:
     name: winget validate
     runs-on: windows-latest
