fix(ci): satisfy winget validation and clippy lint

--- a/winget/pybun.yaml
+++ b/winget/pybun.yaml
@@ -10,6 +10,9 @@ License: MIT
 LicenseUrl: https://github.com/pybun/pybun/blob/main/LICENSE
 ShortDescription: Rust-based single-binary Python toolchain.
 Moniker: pybun
+Commands:
+  - pybun
+  - pybun-cli
 Tags:
   - python
   - package-manager
@@ -20,8 +23,6 @@ Installers:
     InstallerType: zip
     NestedInstallerType: portable
     NestedInstallerFiles:
-      - RelativeFilePath: pybun-x86_64-pc-windows-msvc/pybun.exe
-        PortableCommandAlias: pybun
       - RelativeFilePath: pybun-x86_64-pc-windows-msvc/pybun.exe
         PortableCommandAlias: pybun-cli
 ManifestType: singleton
