--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ native-watch = ["notify"]
 performance-allocator = ["mimalloc", "tikv-jemallocator"]
 
 [dependencies]
-clap = { version = "4.5", features = ["derive"] }
+clap = { version = "4.5", features = ["derive", "env"] }
 color-eyre = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
