feat: implement native wheel installation and caching for PEP 723 optimization (PR7.9)
- Implemented WheelCache for local package storage.
- Implemented native Installer for wheel extraction and dist-info handling.
- Integrated native installation into run_script fallback.
- Added parallel installation support.
- Optimized benchmark script for fair measurement.
- Verified sub-1000ms cold start performance.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ semver = "1.0"
 dirs = "5.0"
 toml = "0.8"
 tempfile = "3.14"
+zip = { version = "0.6", default-features = false, features = ["deflate"] }
 uuid = { version = "1.11", features = ["v4"] }
 sha2 = "0.10"
 hex = "0.4"
