--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires = [
 
 [project]
 classifiers = [
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.8",
@@ -16,23 +15,17 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-dependencies = [
-    "cffi>=1.15,<2",
-    "numpy",
-    "pandas",
-    "scikit-image",
-]
+dependencies = []
 description = "PyBun shim bootstrapper for signed releases"
-name = "pybun"
-readme = "README.md"
+name = "pybun-cli"
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.8"
+license = "MIT"
+license-files = ["LICENSE"]
 version = "0.1.0"
 
 [[project.authors]]
 name = "PyBun Authors"
-
-[project.license]
-text = "MIT"
 
 [project.scripts]
 pybun = "pybun.cli:main"
@@ -47,4 +40,5 @@ include-package-data = false
 
 [tool.setuptools.packages.find]
 include = ["pybun*"]
+exclude = ["pybun.tests*"]
 where = ["."]
