--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ fs2 = "0.4"
 # Native file system watcher (optional, for `pybun watch`)
 notify = { version = "7.0", optional = true }
 tokio = { version = "1.48.0", features = ["full"] }
-reqwest = { version = "0.12.25", features = ["blocking", "json", "rustls-tls", "stream"] }
+reqwest = { version = "0.12.25", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
 futures = "0.3.31"
 dashmap = "6.1"
 mimalloc = { version = "0.1.43", optional = true }
