--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pybun"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2024"
 license = "MIT"
 
@@ -37,6 +37,8 @@ futures = "0.3.31"
 dashmap = "6.1"
 mimalloc = { version = "0.1.43", optional = true }
 tikv-jemallocator = { version = "0.6.0", optional = true }
+dialoguer = "0.12.0"
+console = "0.15"
 
 [dev-dependencies]
 assert_cmd = "2.0"
